--- a/multi_x_serverless/global_routing/internal/trackers/datacenters/aws_datacenter_info/.chalice/config.json
+++ b/multi_x_serverless/global_routing/internal/trackers/datacenters/aws_datacenter_info/.chalice/config.json
@@ -1,10 +1,9 @@
 {
   "version": "2.0",
-  "app_name": "aws_ping",
+  "app_name": "aws_datacenter_info",
   "autogen_policy": false,
   "stages": {
     "prod": {
-      "lambda_timeout": 300
     }
   }
 }
