--- a/multi_x_serverless/global_routing/internal/trackers/latency_tracker/latency_calculator/.chalice/config.json
+++ b/multi_x_serverless/global_routing/internal/trackers/latency_tracker/latency_calculator/.chalice/config.json
@@ -1,6 +1,6 @@
 {
   "version": "2.0",
-  "app_name": "aws_ping",
+  "app_name": "latency_calculator",
   "autogen_policy": false,
   "stages": {
     "prod": {
