--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ chalice = "^1.29.0"
 google-auth = "^2.23.4"
 google-cloud-storage = "^2.13.0"
 google-cloud-compute = "^1.14.1"
+numpy = "^1.26.2"
+networkx = "^3.2.1"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
