Fix capitalization of vCPU property in workflow_description.yaml

--- a/multi_x_serverless/config/global_routing/workflow_description.yaml
+++ b/multi_x_serverless/config/global_routing/workflow_description.yaml
@@ -67,7 +67,7 @@
                       type: "object",
                       properties:
                         {
-                          vcpu: { type: "integer" },
+                          vCPU: { type: "integer" },
                           memory: { type: "integer" },
                           architecture:
                             { type: "enum", enum: ["x86_64", "arm64"] },
