--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ google-cloud-storage = "^2.13.0"
 google-cloud-compute = "^1.14.1"
 numpy = "^1.26.2"
 networkx = "^3.2.1"
+levenshtein = "^0.23.0"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
