--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ google-cloud-compute = "^1.14.1"
 numpy = "^1.26.2"
 networkx = "^3.2.1"
 levenshtein = "^0.23.0"
+pandas = "^2.1.3"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
@@ -43,6 +44,7 @@ black = "^23.11.0"
 pylint = "^3.0.2"
 pytest-cov = "^4.1.0"
 types-requests = "^2.31.0.10"
+seaborn = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
