--- a/multi_x_serverless/global_routing/internal/trackers/latency/aws_ping/requirements.txt
+++ b/multi_x_serverless/global_routing/internal/trackers/latency/aws_ping/requirements.txt
@@ -1,2 +1,2 @@
-#google-auth==2.23.4 # TODO (vGsteiger): Enable once we extend to GCP
-#google-cloud-compute==1.14.1
+#google-auth>=2.23.4 # TODO (vGsteiger): Enable once we extend to GCP
+#google-cloud-compute>=1.14.1
