--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,21 +13,22 @@ repository = "https://github.com/ubc-cirrus-lab/TODO"
 playground = "multi_x_serverless.playground.main:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 pyyaml = "^6.0.1"
-boto3 = "^1.33.11"
+boto3 = "^1.33.13"
 jsonschema = "^4.20.0"
 googlemaps = "^4.10.0"
 bs4 = "^0.0.1"
 chalice = "^1.29.0"
 google-auth = "^2.25.2"
-google-cloud-storage = "^2.13.0"
+google-cloud-storage = "^2.14.0"
 google-cloud-compute = "^1.15.0"
 numpy = "^1.26.2"
 networkx = "^3.2.1"
 levenshtein = "^0.23.0"
 pandas = "^2.1.4"
 tqdm = "^4.66.1"
+click = "^8.1.7"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
@@ -46,6 +47,8 @@ pylint = "^3.0.2"
 pytest-cov = "^4.1.0"
 types-requests = "^2.31.0.10"
 seaborn = "^0.13.0"
+httpie = "^3.2.2"
+dna-features-viewer = "^3.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
