--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ levenshtein = "^0.23.0"
 pandas = "^2.1.4"
 tqdm = "^4.66.1"
 click = "^8.1.7"
+pydantic = "^2.5.2"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
