--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 description = ""
 license = "Apache-2.0"
 authors = [
-    "Viktor Gsteiger <v.gsteiger@gmail.com>",
+    "Viktor Gsteiger <vgsteiger@student.ethz.ch>",
+    "Daniel Long <pinlong@student.ubc.ca>",
+    "Mohammad Shahrad <mohammad.shahrad@ubc.ca>",
 ]
 readme = "README.md"
-repository = "https://github.com/ubc-cirrus-lab/TODO"
+repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"
 
 [tool.poetry.scripts]
 multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"
@@ -15,7 +17,7 @@ multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:ma
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0.1"
-boto3 = "^1.34.2"
+boto3 = "^1.34.5"
 jsonschema = "^4.20.0"
 googlemaps = "^4.10.0"
 bs4 = "^0.0.1"
@@ -37,7 +39,7 @@ pydantic = "^2.5.2"
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.4"
 pytest = "^7.4.3"
-coverage = "^7.3.3"
+coverage = "^7.3.4"
 mypy = "^1.7.0"
 types-pyyaml = "^6.0.12.12"
 types-jsonschema = "^4.20.0.0"
@@ -49,7 +51,6 @@ pytest-cov = "^4.1.0"
 types-requests = "^2.31.0.10"
 seaborn = "^0.13.0"
 httpie = "^3.2.2"
-dna-features-viewer = "^3.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
