--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"
 multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.11.0"
 pyyaml = "^6.0.1"
 boto3 = "^1.34.5"
 jsonschema = "^4.20.0"
@@ -54,6 +54,7 @@ httpie = "^3.2.2"
 gtts = "^2.5.0"
 profanity = "^1.1"
 pydub = "^0.25.1"
+scikit-learn = "^1.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
