--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,8 @@ follow_imports = "skip"
 ignore_missing_imports = true
 pretty = true
 exclude = [
-    "multi_x_serverless/tests"
+    "multi_x_serverless/tests",
+    "multi_x_serverless/routing/legacy"
     ]
 
 [tool.isort]
