--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:ma
 [tool.poetry.dependencies]
 python = "~3.11.0"
 pyyaml = "^6.0.1"
-boto3 = "^1.34.5"
+boto3 = "^1.34.11"
 jsonschema = "^4.20.0"
 googlemaps = "^4.10.0"
 bs4 = "^0.0.1"
@@ -31,15 +31,15 @@ levenshtein = "^0.23.0"
 pandas = "^2.1.4"
 tqdm = "^4.66.1"
 click = "^8.1.7"
-pydantic = "^2.5.2"
+pydantic = "^2.5.3"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.4"
-pytest = "^7.4.3"
-coverage = "^7.3.4"
+pytest = "^7.4.4"
+coverage = "^7.4.0"
 mypy = "^1.7.0"
 types-pyyaml = "^6.0.12.12"
 types-jsonschema = "^4.20.0.0"
@@ -48,13 +48,14 @@ setuptools = "^69.0.2"
 black = "^23.11.0"
 pylint = "^3.0.2"
 pytest-cov = "^4.1.0"
-types-requests = "^2.31.0.10"
-seaborn = "^0.13.0"
+types-requests = "^2.31.0"
+seaborn = "^0.13.1"
 httpie = "^3.2.2"
 gtts = "^2.5.0"
 profanity = "^1.1"
 pydub = "^0.25.1"
 scikit-learn = "^1.3.2"
+pillow = "^10.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
