--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -26,6 +26,9 @@ constraints:
     - carbon
   regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
     only_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
-    allowed_providers: null
-    forbidden_providers: null
     forbidden_regions: null
+providers: # TODO (#21): Rework function registration
+  - name: "aws"
+    configuration:
+      timeout: 60
+      memory: 128
