Add number_of_edges property to DAG class and update workflow configuration

--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -27,8 +27,8 @@ constraints:
   regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
     only_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
     forbidden_regions: null
-providers: # TODO (#21): Rework function registration
+providers:
   - name: "aws"
-    configuration:
+    config:
       timeout: 60
       memory: 128
