--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,17 +15,17 @@ repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"
 multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"
 
 [tool.poetry.dependencies]
-python = "~3.11.0"
+python = "^3.10"
 pyyaml = "^6.0.1"
 boto3 = "^1.34.11"
 jsonschema = "^4.20.0"
 googlemaps = "^4.10.0"
 bs4 = "^0.0.1"
 chalice = "^1.30.0"
-google-auth = "^2.25.2"
+google-auth = "^2.26.1"
 google-cloud-storage = "^2.14.0"
 google-cloud-compute = "^1.15.0"
-numpy = "^1.26.2"
+numpy = "^1.26.3"
 networkx = "^3.2.1"
 levenshtein = "^0.23.0"
 pandas = "^2.1.4"
