--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -42,8 +42,7 @@ jobs:
         uses: ./.github/actions/poetry
       - name: Run tests
         run: |
-          poetry run pytest multi_x_serverless --cov-reset --cache-clear --cov-fail-under=90
-          poetry run pytest > pytest-coverage.txt
+          poetry run pytest multi_x_serverless --cov-reset --cache-clear --cov-fail-under=90 --cov=app > pytest-coverage.txt
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
 
