--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -24,11 +24,12 @@ constraints:
     - cost
     - runtime
     - carbon
-  regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
-    only_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
-    forbidden_regions: null
-providers:
-  - name: "aws"
-    config:
-      timeout: 60
-      memory: 128
+# TODO (#30): Move regions_and_providers to top level and move providers
+regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+  allowed_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
+  disallowed_regions: null
+  providers:
+    - name: "aws"
+      config:
+        timeout: 60
+        memory: 128
