Restructure of Deployment Client for New Provider Field (#34)
* Refactor workflow_builder.py and workflow.py

* Fix function assignment in test_workflow_builder.py and update get_successor_instance_name() in workflow.py

* Add unit tests for DeploymentPackager class

* Add print statements and update method comments

* Refactor MultiXServerlessWorkflow class in workflow.py

* Fix comments and formatting in workflow.py and test_deployment_packager.py

* Add support for merge function and generate run ID

* Add get_predecessor_data method to AWSClient

* Add new files and update imports

* Fix #18 and #30

* Add optional fields to RegionAndProviders model

* Refactor deployment packager and deployer classes

* Fix parsing issues in datacenter and latency calculators

* Fix home_regions data type in config_schema.py and config.py

* Update region and provider configuration

* Fix endpoint and region formatting in function.py

* Update regions and providers configuration

--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -3,7 +3,7 @@ environment_variables:
   - name: "ENV_VAR_1"
     value: "value_1"
 iam_policy_file: "iam_policy.json"
-home_regions: ["aws:us-west-2"]  # Regions are defined as "provider:region" (e.g. aws:us-west-2)
+home_regions: [["aws", us-west-2"]] # Regions are defined as "provider:region" (e.g. aws:us-west-2)
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints: # None for none
@@ -24,11 +24,11 @@ constraints:
     - cost
     - runtime
     - carbon
-  regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
-    only_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
-    forbidden_regions: null
-providers:
-  - name: "aws"
-    config:
-      timeout: 60
-      memory: 128
+regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+  only_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
+  forbidden_regions: null
+  providers:
+    - name: "aws"
+      config:
+        timeout: 60
+        memory: 128
