--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,6 +131,7 @@ disable = [
       "R0801",  # Similar lines in %s files (we will have this because of how serverless functions need to be self-contained)
       "W0511",  # TODO
       "R0903",  # Too few public methods (we need this for our dataclasses)
+      "R0914",  # Too many local variables (too noisy)
     ]
 ignore = [
     "tests",
