--- a/benchmarks/text_2_speech_censoring/.multi-x-serverless/config.yml
+++ b/benchmarks/text_2_speech_censoring/.multi-x-serverless/config.yml
@@ -23,8 +23,7 @@ constraints:
   regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
     only_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
     forbidden_regions: null
-providers:
-  - name: "aws"
+  aws:
     config:
       timeout: 60
       memory: 128
