--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -34,7 +34,7 @@ regions_and_providers: # Either the user specify only allowed regions (which wil
     - provider: "aws"
       region: "us-east-2"
   providers:
-    - name: "aws"
+    aws:
       config:
         timeout: 60
         memory: 128
