Update regions_and_providers configuration

--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -28,10 +28,10 @@ constraints:
     - runtime
     - carbon
 regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
-  only_regions:
+  allowed_regions:
     - provider: "aws"
       region: "us-east-1"
-  forbidden_regions:
+  disallowed_regions:
     - provider: "aws"
       region: "us-east-2"
   providers:
