--- a/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
+++ b/multi_x_serverless/deployment/client/cli/template/.multi-x-serverless/config.yml
@@ -11,14 +11,14 @@ estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints: # None for none
     cost:
-      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'percentage' (In fractions such as 1.1)
-      value: COST_CONSTRAINT
+      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'relative' (In fractions such as 1.1)
+      value: 100
     runtime:
       type: "absolute"
-      value: RUNTIME_CONSTRAINT
+      value: 100
     carbon:
       type: "absolute"
-      value: CARBON_CONSTRAINT
+      value: 100
   soft_resource_constraints: # None for none
     cost: null
     runtime: null
