atempt to remove image

--- a/.gitignore
+++ b/.gitignore
@@ -90,4 +90,4 @@ plotting/plots/*.png
 testing
 
 # Solver benchmarks dag image files
-benchmarks/solve_benchmarks/images/
+benchmarks/solve_benchmarks/images/*.png
