Modified order of cost,carbon,runtime in bfs fined grained results. Also modified solver_benchmark for transmission and execution values to have reasonable random results and dependent on inputs.

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,9 @@ testing
 
 # Solver benchmarks dag image files
 benchmarks/solver_benchmarks/images/*.png
+
+# Benchmark images
+solver_benchmark.png
+
+# Benchmark results
+benchmarks/solver_benchmarks/results.json
