Solver Benchmarks and BFS Fixes (#89)
* Add new files and directories for latency, cost, and carbon data gatherers

* Implement new functions and update existing ones

* Delete unused calculator and data source files

* Remove unused code and update function signature in index_to_value method

* Delete unused files and refactor loaders

* Add carbon, datacenter, and workflow loaders

* Delete legacy files and update data source setup methods

* Update data source setup methods

* Fix data source setup and update cost calculator

* Refactor data source setup and add instance configuration

* Update function signatures for result types

* Fix variable names and remove unused code

* Fix type hints and handle special cases in data sources

* Refactor carbon calculator and input classes

* Fix data loading and print statements in input_manager.py

* Reverted config changes

* Update memory configuration for AWS provider

* Added consideration of special case of from region (of from no region -> start dag node).

* Fix formatting and import issues in multiple files

* Refactor workflow ID to use lowercase in method signatures

* Refactor variable names in input_manager.py

* Changed all relative imports to absolute paths. Removed data_sources legacy code from legacy.

* Resolved few PR comments. (still working on more)

* Addressing issues with mypy

* Resolved compliency issues. Fixed test_solver.py to use new configuration formats.

* Refactor data loading and add missing imports

* Remove testing print statements from TopologicalSolver class

* Declare input manager instead of setting it up

* added comments for clarification

* Added comment on optimize reverse mapping in Region model

* Added comment to data_source class.

* Re-ran compliance script

* Added hard constraint check for topological "brute force" solver.

* initial changes to design.md with information regarding data_collector and solver_

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@ plotting/plots/*.png
 
 # testing
 testing
+
+# Solver benchmarks dag image files
+benchmarks/solver_benchmarks/images/
+
+# Benchmark results
+benchmarks/solver_benchmarks/results/
