--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,9 @@ ignore_missing_imports = true
 pretty = true
 exclude = [
     "multi_x_serverless/tests",
-    "multi_x_serverless/routing/legacy"
+    "multi_x_serverless/routing/legacy",
+    "multi_x_serverless/common/setup_tables.py",
+    "multi_x_serverless/deployment/common/remote_client/mock_remote_client.py",
     ]
 
 [tool.isort]
