--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ plotting/plots/*.png
 
 # testing
 testing
+testing.py
 
 # Solver benchmarks dag image files
 benchmarks/solver_benchmarks/images/
