--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ profanity = "^1.1"
 pydub = "^0.25.1"
 scikit-learn = "^1.4.0"
 pillow = "^10.2.0"
+pip-install-test = "^0.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
