--- a/benchmarks/text_2_speech_censoring/.multi-x-serverless/config.yml
+++ b/benchmarks/text_2_speech_censoring/.multi-x-serverless/config.yml
@@ -1,29 +1,41 @@
 workflow_name: "text_2_speech_censoring"
+workflow_version: "0.0.1"
 environment_variables:
-  - name: "ENV_VAR_1"
+  - key: "ENV_VAR_1"
     value: "value_1"
 iam_policy_file: "iam_policy.json"
-home_regions: ["aws:us-west-2"]  # Regions are defined as "provider:region" (e.g. aws:us-west-2)
+home_regions:
+  - provider: "aws"
+    region: "us-west-2"
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints: # None for none
     cost:
-      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'percentage' (In fractions such as 1.1)
-      value: COST_CONSTRAINT
+      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'relative' (In fractions such as 1.1)
+      value: 100
     runtime:
       type: "absolute"
-      value: RUNTIME_CONSTRAINT
+      value: 100
     carbon:
       type: "absolute"
-      value: CARBON_CONSTRAINT
+      value: 100
   soft_resource_constraints: # None for none
     cost: null
     runtime: null
     carbon: null
-  regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
-    allowed_regions: null # Only check other conditions if this is None, else will restrict to ONLY those regions
-    disallowed_regions: null
-  aws:
-    config:
-      timeout: 60
-      memory: 128
+  priority_order:
+    - cost
+    - runtime
+    - carbon
+regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+  allowed_regions:
+    - provider: "aws"
+      region: "us-west-2"
+  disallowed_regions:
+    - provider: "aws"
+      region: "us-east-2"
+  providers:
+    aws:
+      config:
+        timeout: 60
+        memory: 128
