--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"
 multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10,<3.12"
 pyyaml = "^6.0.1"
 boto3 = "^1.34.23"
 jsonschema = "^4.21.1"
@@ -32,6 +32,7 @@ tqdm = "^4.66.1"
 click = "^8.1.7"
 pydantic = "^2.5.3"
 bs4 = "^0.0.2"
+tensorflow = "^2.15.0"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
