--- a/benchmarks/image_processing/.multi-x-serverless/config.yml
+++ b/benchmarks/image_processing/.multi-x-serverless/config.yml
@@ -31,9 +31,13 @@ regions_and_providers: # Either the user specify only allowed regions (which wil
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
-  disallowed_regions:
     - provider: "aws"
       region: "us-east-2"
+    - provider: "aws"
+      region: "us-west-1"
+    - provider: "aws"
+      region: "us-west-2"
+  disallowed_regions:
   providers:
     aws:
       config:
