--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,20 +15,16 @@ repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"
 multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10,<3.12"
 pyyaml = "^6.0.1"
-boto3 = "^1.34.23"
+boto3 = "^1.34.43"
 jsonschema = "^4.21.1"
 googlemaps = "^4.10.0"
-chalice = "^1.30.0"
-google-auth = "^2.26.1"
+google-auth = "^2.28.0"
 google-cloud-storage = "^2.14.0"
-google-cloud-compute = "^1.15.0"
-numpy = "^1.26.3"
-networkx = "^3.2.1"
-levenshtein = "^0.23.0"
+google-cloud-compute = "^1.16.1"
+numpy = "^1.26.4"
 pandas = "^2.2.0"
-tqdm = "^4.66.1"
 click = "^8.1.7"
 pydantic = "^2.5.3"
 bs4 = "^0.0.2"
@@ -39,19 +35,19 @@ bs4 = "^0.0.2"
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.4"
 pytest = "^7.4.4"
-coverage = "^7.4.0"
-mypy = "^1.7.0"
+coverage = "^7.4.1"
+mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 types-jsonschema = "^4.21.0.0"
-isort = "^5.12.0"
-setuptools = "^69.0.2"
-black = "^23.11.0"
-pylint = "^3.0.2"
+isort = "^5.13.2"
+setuptools = "^69.1.0"
+black = "^23.12.1"
+pylint = "^3.0.3"
 pytest-cov = "^4.1.0"
 types-requests = "^2.31.0"
 seaborn = "^0.13.1"
 httpie = "^3.2.2"
-gtts = "^2.5.0"
+gtts = "^2.5.1"
 profanity = "^1.1"
 pydub = "^0.25.1"
 scikit-learn = "^1.4.0"
