--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ scikit-learn = "^1.4.0"
 pillow = "^10.2.0"
 pip-install-test = "^0.5"
 dna-features-viewer = "^3.1.3"
+networkx = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
