--- a/integration_tests/integration_test_workflow/.multi-x-serverless/config.yml
+++ b/integration_tests/integration_test_workflow/.multi-x-serverless/config.yml
@@ -4,9 +4,9 @@ environment_variables:
   - key: "TEST_ENV_VAR_1"
     value: "test_value_1"
 iam_policy_file: "iam_policy.json"
-home_regions:
-  - provider: "integration_test_provider"
-    region: "rivendell"
+home_region:
+  provider: "integration_test_provider"
+  region: "rivendell"
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints:
