--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pip-install-test = "^0.5"
 dna-features-viewer = "^3.1.3"
 networkx = "^3.2.1"
 types-pytz = "^2024.1.0.20240203"
+ipykernel = "^6.29.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
