--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ click = "^8.1.7"
 pydantic = "^2.5.3"
 bs4 = "^0.0.2"
 pytz = "^2024.1"
+ipykernel = "^6.29.3"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
