--- a/benchmarks/image_processing/.multi-x-serverless/config.yml
+++ b/benchmarks/image_processing/.multi-x-serverless/config.yml
@@ -1,33 +1,24 @@
 workflow_name: "image_processing"
-workflow_version: "0.0.2"
-environment_variables:
-  - key: "ENV_VAR_1"
-    value: "value_1"
+workflow_version: "0.0.1"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
   region: "us-east-1"
 estimated_invocations_per_month: 1000000
 constraints:
-  hard_resource_constraints: # None for none
-    cost:
-      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'relative' (In fractions such as 1.1)
-      value: 100
-    runtime:
-      type: "absolute"
-      value: 100
-    carbon:
-      type: "absolute"
-      value: 100
-  soft_resource_constraints: # None for none
+  hard_resource_constraints:
+    cost: null
+    runtime: null
+    carbon: null
+  soft_resource_constraints:
     cost: null
     runtime: null
     carbon: null
   priority_order:
+    - carbon
     - cost
     - runtime
-    - carbon
-regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+regions_and_providers:
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
@@ -41,5 +32,5 @@ regions_and_providers: # Either the user specify only allowed regions (which wil
   providers:
     aws:
       config:
-        timeout: 60
-        memory: 128
+        timeout: 120
+        memory: 256
