--- a/.github/actions/poetry/action.yml
+++ b/.github/actions/poetry/action.yml
@@ -5,6 +5,7 @@ inputs:
   python-version:
     description: Python Version
     required: true
+    default: "3.12"
   poetry-version:
     description: Poetry Version
     required: true
