--- a/benchmarks/map_reduce/.multi-x-serverless/config.yml
+++ b/benchmarks/map_reduce/.multi-x-serverless/config.yml
@@ -9,33 +9,31 @@ home_region:
   region: "us-east-1"
 estimated_invocations_per_month: 1000000
 constraints:
-  hard_resource_constraints: # None for none
-    cost:
-      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'relative' (In fractions such as 1.1)
-      value: 100
-    runtime:
-      type: "absolute"
-      value: 100
-    carbon:
-      type: "absolute"
-      value: 100
+  hard_resource_constraints:
+    cost: null
+    runtime: null
+    carbon: null
   soft_resource_constraints: # None for none
     cost: null
     runtime: null
     carbon: null
   priority_order:
+    - carbon
     - cost
     - runtime
-    - carbon
 regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
-  disallowed_regions:
     - provider: "aws"
       region: "us-east-2"
+    - provider: "aws"
+      region: "us-west-1"
+    - provider: "aws"
+      region: "us-west-2"
+  disallowed_regions:
   providers:
     aws:
       config:
-        timeout: 60
-        memory: 128
+        timeout: 120
+        memory: 512
