--- a/benchmarks/text_2_speech_censoring/.multi-x-serverless/config.yml
+++ b/benchmarks/text_2_speech_censoring/.multi-x-serverless/config.yml
@@ -18,7 +18,7 @@ constraints:
     - carbon
     - cost
     - runtime
-regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+regions_and_providers:
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
