--- a/benchmarks/experiments/wrapper_overhead/image_processing/external_database/multi_x/.multi-x-serverless/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/image_processing/external_database/multi_x/.multi-x-serverless/config.yml
@@ -1,12 +1,12 @@
 workflow_name: "wo-im_p-ed-multi_x"
-workflow_version: "0.0.1"
+workflow_version: "0.0.2"
 environment_variables:
   - key: "ENV_VAR_1"
     value: "value_1"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
-  region: "us-east-2"
+  region: 'ca-west-1'
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints:
@@ -24,7 +24,7 @@ constraints:
 regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
   allowed_regions:
     - provider: "aws"
-      region: "us-east-2"
+      region: 'ca-west-1'
   disallowed_regions:
   providers:
     aws:
