--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"
 multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"
 
 [tool.poetry.dependencies]
-python = "^3.10,<3.12"
+python = "^3.10,<=3.12"
 pyyaml = "^6.0.1"
 boto3 = "^1.34.43"
 jsonschema = "^4.21.1"
@@ -77,7 +77,7 @@ branch = true
 directory = "coverage_html_report"
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.12"
 mypy_path = "multi_x_serverless"
 check_untyped_defs = true
 disallow_untyped_defs = true
