--- a/benchmarks/experiments/wrapper_overhead/video_analytics/external_database/multi_x/.multi-x-serverless/config.yml
+++ b/benchmarks/experiments/wrapper_overhead/video_analytics/external_database/multi_x/.multi-x-serverless/config.yml
@@ -1,5 +1,5 @@
-workflow_name: "video_analytics"
-workflow_version: "0.0.1"
+workflow_name: "wo-vid_an-ed-multi_x"
+workflow_version: "0.0.2"
 iam_policy_file: "iam_policy.json"
 home_region:
   provider: "aws"
