--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ click = "^8.1.7"
 pydantic = "^2.6.4"
 bs4 = "^0.0.2"
 pytz = "^2024.1"
+ipykernel = "^6.29.4"
+jupyter = "^1.0.0"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
