--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ bs4 = "^0.0.2"
 pytz = "^2024.1"
 ipykernel = "^6.29.4"
 jupyter = "^1.0.0"
+tensorflow = "^2.16.1"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
