--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "caribou"
 version = "0.1.0"
-description = ""
+description = "Caribou is a framework for running and deploying complex serverless workflows multi-constraint and multi-objective aware on AWS over multiple regions."
 license = "Apache-2.0"
 authors = [
     "Viktor Gsteiger <vgsteiger@student.ethz.ch>",
@@ -16,12 +16,12 @@ caribou = "caribou.deployment.client.caribou:main"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pyyaml = "^6.0.1"
-boto3 = "^1.34.43"
-jsonschema = "^4.21.1"
-googlemaps = "^4.10.0"
-google-auth = "^2.28.0"
-numpy = "^1.26.4"
+pyyaml = "^6.0"
+boto3 = "^1.34"
+jsonschema = "^4.21"
+googlemaps = "^4.10"
+google-auth = "^2.28"
+numpy = "^1.26"
 pandas = "^2.2.0"
 click = "^8.1.7"
 pydantic = "^2.6.4"
@@ -91,18 +91,13 @@ exclude = [
     "caribou/tests",
     "caribou/common/setup",
     "caribou/common/models/remote_client/mock_remote_client.py",
-    ]
+]
 
 [tool.isort]
 profile = "black"
 line_length = 120
 skip_gitignore = true
-extend_skip_glob = [
-    "**/*/__init__.py",
-    "**/tests/**",
-    "**/*.pyi",
-    "**/*.pyc"
-    ]
+extend_skip_glob = ["**/*/__init__.py", "**/tests/**", "**/*.pyi", "**/*.pyc"]
 
 [tool.black]
 line-length = 120
@@ -127,24 +122,18 @@ exclude = '''
 [tool.pylint]
 max-line-length = 120
 disable = [
-      "C0116",  # Missing function or method docstring
-      "C0114",  # Missing module docstring
-      "C0115",  # Missing class docstring
-      "W0621",  # Redefining name %r from outer scope (line %s) (we need this for our logging)
-      "R0913",  # Too many arguments
-      "R0801",  # Similar lines in %s files (we will have this because of how serverless functions need to be self-contained)
-      "W0511",  # TODO
-      "R0903",  # Too few public methods (we need this for our dataclasses)
-      "R0914",  # Too many local variables (too noisy)
-    ]
-ignore = [
-    "tests",
-    "caribou/deployment/client/cli/template"
-    ]
+    "C0116", # Missing function or method docstring
+    "C0114", # Missing module docstring
+    "C0115", # Missing class docstring
+    "W0621", # Redefining name %r from outer scope (line %s) (we need this for our logging)
+    "R0913", # Too many arguments
+    "R0801", # Similar lines in %s files (we will have this because of how serverless functions need to be self-contained)
+    "W0511", # TODO
+    "R0903", # Too few public methods (we need this for our dataclasses)
+    "R0914", # Too many local variables (too noisy)
+]
+ignore = ["tests", "caribou/deployment/client/cli/template"]
 
 [tool.pytest.ini_options]
 testpaths = ["caribou/tests"]
-addopts = [
-      "--cov=caribou",
-      "--cov-report=html",
-    ]
+addopts = ["--cov=caribou", "--cov-report=html"]
