--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -97,7 +97,7 @@ jobs:
         run: |
           poetry run python integration_tests/run_integration_tests.py
 
-  go-project:
+  go-build-test:
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.draft }}
     timeout-minutes: 5
@@ -105,6 +105,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Go
         uses: ./.github/actions/go
+      - name: Make build script executable
+        run: chmod +x ./caribou-go/build_caribou.sh
       - name: Run go tests
         run: |
           ./caribou-go/build_caribou.sh
