wip new change atempt

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ benchmarks/solver_benchmarks/images/
 benchmarks/solver_benchmarks/results/
 
 Dockerfile
+
+# Framework deployment packages
+.caribou/
