--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ click = "^8.1.7"
 pydantic = "^2.6.4"
 bs4 = "^0.0.2"
 pytz = "^2024.1"
+statsmodels = "^0.14.2"
+awscli = "^1.34.3"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
