--- a/benchmarks/FEM_simulation/.caribou/config.yml
+++ b/benchmarks/FEM_simulation/.caribou/config.yml
@@ -1,5 +1,5 @@
 workflow_name: "FEM_simulation"
-workflow_version: "0.0.1"
+workflow_version: "0.0.2"
 environment_variables:
   - key: "ENV_VAR_1"
     value: "value_1"
@@ -10,30 +10,27 @@ home_region:
 estimated_invocations_per_month: 1000000
 constraints:
   hard_resource_constraints: # None for none
-    cost:
-      type: "absolute" # Absolute value as 'absolute' (in USD) or Percentage from deployment at home regions as 'relative' (In fractions such as 1.1)
-      value: 100
-    runtime:
-      type: "absolute"
-      value: 100
-    carbon:
-      type: "absolute"
-      value: 100
+    cost: null
+    runtime: null
+    carbon: null
   soft_resource_constraints: # None for none
     cost: null
     runtime: null
     carbon: null
   priority_order:
+    - carbon
     - cost
     - runtime
-    - carbon
-regions_and_providers: # Either the user specify only allowed regions (which will override everything else)
+regions_and_providers:
   allowed_regions:
     - provider: "aws"
       region: "us-east-1"
-  disallowed_regions:
     - provider: "aws"
-      region: "us-east-2"
+      region: "us-west-1"
+    - provider: "aws"
+      region: "us-west-2"
+    - provider: "aws"
+      region: "ca-central-1"
   providers:
     aws:
       config:
