--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ bs4 = "^0.0.2"
 pytz = "^2024.1"
 statsmodels = "^0.14.2"
 awscli = "^1.34.3"
+pypdf2 = "^3.0.1"
+shortuuid = "^1.0.13"
+langchain-community = "^0.2.16"
+langchain-postgres = "^0.0.9"
+faiss-cpu = "^1.8.0.post1"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
