--- a/benchmarks/rag_data_ingestion/.caribou/config.yml
+++ b/benchmarks/rag_data_ingestion/.caribou/config.yml
@@ -34,3 +34,6 @@ regions_and_providers:
       config:
         timeout: 300
         memory: 1024
+        additional_docker_commands:
+          - "yum update -y"
+          - "yum install -y libGL"
