--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ langchain-community = "^0.2.16"
 langchain-postgres = "^0.0.9"
 faiss-cpu = "^1.8.0.post1"
 cron-descriptor = "^1.4.5"
+zstandard = "^0.23.0"
 
 [tool.poetry.extras]
 # This can be used for a more fine-grained dependency management in the future
