modified github action permissions for ppytest

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -44,6 +44,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.draft }}
     timeout-minutes: 5
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - name: Setup poetry
